--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,14 +10,17 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <li class="nav-item"
+                    >
+                    <a class="nav-link active"
+                        [routerLink]="['inicio']" aria-current="page">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre nosotros</a>
+                    <a class="nav-link" 
+                    [routerLink]="['sobre-nosotros']">Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Inicio sesión</a>
+                    <a class="nav-link">Inicio sesión</a>
                 </li>
             </ul>
         </div>
