--- a/src/app/components/sobre-nosotros/sobre-nosotros.component.html
+++ b/src/app/components/sobre-nosotros/sobre-nosotros.component.html
@@ -2,9 +2,12 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                <h1 class="text-center">Sobre nosotros</h1>
+                <p>¡Bienvenido a nuestro rincón digital, el Club de Java, donde la pasión por la programación en Java se convierte en una experiencia compartida y enriquecedora! Este club nació durante nuestro emocionante viaje como desarrolladores web, guiados por la inspiración y mentoría de nuestro Java Champion, Toteabe.</p>
+                <p>En nuestro afán por sumergirnos en el vasto mundo de la programación, descubrimos que Java era mucho más que un lenguaje de programación; era un lenguaje que inspiraba creatividad, eficiencia y elegancia en el desarrollo de software. Motivados por esta revelación, decidimos formar nuestro propio Club de Java, un espacio dedicado a explorar, aprender y compartir experiencias en el fascinante universo de Java.</p>
+                <p>Cada miembro de nuestro club comparte una pasión inquebrantable por la excelencia en el código y la resolución creativa de problemas. En este espacio colaborativo, no solo aprendemos de las complejidades y bellezas de Java, sino que también celebramos los éxitos, enfrentamos los desafíos y nos apoyamos mutuamente en nuestro continuo crecimiento como programadores.</p>
+                <p>Nuestro querido mentor, Toteabe, un Java Champion con una profunda experiencia y amor por la comunidad, ha sido el faro que guía nuestras travesías. Gracias a su orientación, hemos encontrado inspiración para superar obstáculos y explorar nuevas fronteras en el vasto paisaje de Java.</p>
+                <p>En el Club de Java, no solo compartimos conocimientos y códigos, sino también risas, descubrimientos y la emoción de estar inmersos en una disciplina que amamos. Únete a nosotros en este viaje emocionante, donde la pasión por Java se convierte en una conexión que trasciende las líneas de código y crea una comunidad vibrante y dinámica. ¡Estamos emocionados de tenerte a bordo en nuestro Club de Java, donde la programación se encuentra con la camaradería!</p>
             </div>
         </div>
     </div>
