--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,16 +1,15 @@
 <div class="container-xl">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
+        <div *ngFor="let post of postList" class="col-md-10 col-lg-8 col-xl-7">
             <!-- Post preview-->
             <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                    <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
+                <a [routerLink]="[ '/post', post.id ]">
+                    <h2 class="post-title">{{ post.title }}</h2>
                 </a>
                 <p class="post-meta">
                     Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on September 24, 2023
+                    <a >{{ post.author.username }}</a>
+                    {{ post.postDate }}
                 </p>
             </div>
             <!-- Divider-->
