--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-xl    ">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+        <a class="navbar-brand d-flex align-items-center gap-2" href="">
             <img src="../../../assets/img/logo.png" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
             <span>Club de Java</span>
           </a>
@@ -21,6 +21,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Inicio sesión</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Regístrate  </a>
                 </li>
             </ul>
         </div>
